slider project done

--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,10 @@
           <div class="row">
                <div class="MainBox">
                     <div class="imageArea">
-                         <img  src="images/a.jpg" alt="Not Found">
+                         <img id="sliderImg"  src="a.jpg" alt="Not Found">
                     </div>
                </div>
-               <div class="btnArea">
-                    <button onclick="nextImg()">Next</button>
-                    <button onclick="prevImg()">Previous</button>
-               </div>
-              
+                             
           </div>
      </div>
 </body>
