--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
      <div class="container">
           <div class="row">
                <div class="MainBox">
+                    <h2>Image Slider</h2>
                     <div class="imageArea">
                          <img id="sliderImg"  src="a.jpg" alt="Not Found">
                     </div>
